--- a/start.html
+++ b/start.html
@@ -1,43 +1,56 @@
-<!doctype html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Artwork Techniques</title>
-<!-- <script type="text/javascript" src="jquery-1.11.1.js"></script> -->
+  <title>Mad-lib Style sentence</title>
+  <meta charset="utf-8" />
+  <script src="/javascript/hw2.js"></script>
 
-<link href="css/style1.css" rel="stylesheet" type="text/css" />
-
-</head> 
-<body class="page" id="top"> 
-	<header>
-		<h1>Artwork Techniques</h1> 
-	</header>
-	<nav id="navigation" role="navigation">
-		<ul>
-			<li><a href="start.html">Start</a></li>
-		</ul>
-		<h2>main navigation</h2> 
-	</nav>
-	<div id="primaryContent">
-		<h2 >Working In Different Mediums</h2>
-		<img id="placeholder" src="images/watercolor/thumbs/artwork_1.jpg" />
-		<!-- <img id="placeholder" src="images/watercolor/thumbs/artwork_2.jpg" />
-		<img id="placeholder" src="images/watercolor/thumbs/artwork_3.jpg" />
-		<img id="placeholder" src="images/watercolor/thumbs/artwork_4.jpg" /> -->
-	
-		
-		<h3 id="replace">Water Color</h3>		
-		<p>watercolor paints come in a huge variety of colors and quality. I believe the best attribute of the watercolor medium, is it's portability. A small duffle bag is all you need to store all the tools for a pointing. hiking out far to find that perfect scene is not a hassle, your other gear will take up more space, food, drink extra clothing, music player. It important to remember that your comfort while out in nature should be a priority, if you are focusing on how sore your legs are getting or how hot or cold it is instead of the colors in front of you, that can make for a negative experience.
-		</p>
-		<h3>Oils</h3>
-		<p>Oil color painting's benefits to me are the drying time of the paint, as you can easily "fix" areas that need to be reworked. getting that eye even on both sides of the face is as easy as wiping away with a cloth and re-sketching a new one. The drying time can also be minus for some as an accidental swipe from your pinky can un-render your perfectly placed eyeball.
-		</p>
-	</div> <!-- closing primaryContent   -->
-	<footer>
-		<p>
-		&copy; Copyright  by jason zeringue
-		</p>
-	</footer>
-		
+</head>
+<body>
+  <form id="madLibForm" method="get" action="#">
+    <h1>Let's Play Mad-Libs</h1>
+    <h2></h2>
+    <p>
+      There is
+      <select id="firstReplacement">
+        <option value="everything">Everything</option>
+        <option value="nothing">Nothing</option>
+        <option value="something">Something</option>
+      </select>
+      <select id="secondReplacement">
+        <option value="wrong">wrong</option>
+        <option value="right">right</option>
+        <option value="spontaneous">spontaneous</option>
+      </select>
+      with
+      <select id="thirdReplacement">
+        <option value="America">America</option>
+        <option value="Egypt">Egypt</option>
+        <option value="Qatar">Qatar</option>
+        <option value="Idaho">Idaho</option>
+      </select>
+      that cannot be
+      <select id="fourthReplacement">
+        <option value="cured">cured</option>
+        <option value="broken">broken</option>
+        <option value="emulsified">emulsified</option>
+        <option value="blended">blended</option>
+      </select>
+      by what is
+      <select id="fifthReplacement">
+        <option value="wrong">wrong</option>
+        <option value="right">right</option>
+        <option value="spontaneous">spontaneous</option>
+      </select> with
+      <select id="sixthReplacement">
+        <option value="America">America</option>
+        <option value="Egypt">Egypt</option>
+        <option value="Qatar">Qatar</option>
+        <option value="Idaho">Idaho</option>
+      </select>
+      ." Bill Clinton'
+    </p>
+    <input type="submit" name="submit" id="submit" value="Submit" onclick="myfunction()" />
+  </form>
 </body>
 </html>
