tweaked src for script

--- a/start.html
+++ b/start.html
@@ -3,7 +3,7 @@
 <head>
   <title>Mad-lib Style sentence</title>
   <meta charset="utf-8" />
-  <script src="/javascript/hw2.js"></script>
+  <script src="javascript/hw2.js"></script>
 
 </head>
 <body>
